force-app/main/default/objects/Route_Schedule_Line__c/Route_Schedule_Line__c.object-meta.xml
<CustomObject>
    <label>Route Schedule Line</label>
    <nameField>
        <displayFormat>RSL-{00000000}</displayFormat>
        <label>Route Schedule Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route_Schedule_Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>