force-app/main/default/objects/Route_Schedule_Line__c/fields/Planned_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Arrival_Time__c</fullName>
    <label>Planned Arrival Time</label>
    <type>Time</type>
</CustomField>