force-app/main/default/objects/Route_Schedule_Line__c/fields/Planned_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Departure_Time__c</fullName>
    <label>Planned Departure Time</label>
    <type>Time</type>
</CustomField>