force-app/main/default/objects/Route_Schedule_Line__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Route_Schedule_Lines</relationshipLabel>
    <relationshipName>Route_Schedule_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>