force-app/main/default/objects/Route_Schedule_Line__c/fields/Route_Date__c.field-meta.xml
<CustomField>
    <fullName>Route_Date__c</fullName>
    <label>Route Date</label>
    <type>Date</type>
</CustomField>