force-app/main/default/objects/Route_Schedule_Line__c/fields/Route_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Route_Schedule__c</fullName>
    <label>Route Schedule</label>
    <referenceTo>Route_Schedule__c</referenceTo>
    <relationshipLabel>Route_Schedule_Lines</relationshipLabel>
    <relationshipName>Route_Schedule_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>