force-app/main/default/objects/Route_Schedule_Line__c/fields/Routing_ID__c.field-meta.xml
<CustomField>
    <fullName>Routing_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Routing ID</label>
    <referenceTo>Routing_ID__c</referenceTo>
    <relationshipLabel>Route_Schedule_Lines</relationshipLabel>
    <relationshipName>Route_Schedule_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>