force-app/main/default/objects/Route_Schedule_Line__c/fields/Schedule_sequence__c.field-meta.xml
<CustomField>
    <fullName>Schedule_sequence__c</fullName>
    <label>Schedule sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>