force-app/main/default/objects/Route_Schedule_Line__c/fields/Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Manifest</label>
    <referenceTo>Shipping_Manifest__c</referenceTo>
    <relationshipLabel>Route_Schedule_Lines</relationshipLabel>
    <relationshipName>Route_Schedule_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>