force-app/main/default/objects/Route_Schedule_Line__c/fields/Sitename__c.field-meta.xml
<CustomField>
    <fullName>Sitename__c</fullName>
    <label>Sitename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>