force-app/main/default/objects/Route_Schedule_Line__c/fields/Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Window_Start__c</fullName>
    <label>Window Start</label>
    <type>Time</type>
</CustomField>