force-app/main/default/objects/Route_Schedule_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Routing_ID__c</columns>
    <columns>Schedule_sequence__c</columns>
    <columns>Shipping_Manifest__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Route_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>