force-app/main/default/objects/Route_Schedule_Line__c/listViews/Route_Live.listView-meta.xml
<ListView>
    <fullName>Route_Live</fullName>
    <columns>Routing_ID__c</columns>
    <columns>NAME</columns>
    <columns>Schedule_sequence__c</columns>
    <columns>Sitename__c</columns>
    <columns>VehicleId__c</columns>
    <columns>Route_Schedule__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Purchase_Order__c</columns>
    <filterScope>Mine</filterScope>
    <label>Route Live</label>
</ListView>